--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "uifunctions",
-  "private": true,
-  "version": "0.0.0",
+  "name": "@rajkumarganesan93/uifunctions",
+  "version": "0.0.1",
   "type": "module",
+  "private": false,
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": ["dist"],
   "scripts": {
-    "dev": "vite",
-    "build": "tsup src/index.ts --format cjs,esm --dts",
-    "test": "vitest",
-    "preview": "vite preview"
-  },
+  "dev": "vite",
+  "build": "tsc -p tsconfig.build.json && tsup src/index.ts --format cjs,esm",
+  "test": "vitest",
+  "preview": "vite preview"
+},
   "dependencies": {
     "axios": "^1.13.5",
     "date-fns": "^4.1.0",
-    "luxon": "^3.7.2",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "luxon": "^3.7.2"
+  },
+  "peerDependencies": {
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -32,5 +38,12 @@
     "typescript-eslint": "^8.48.0",
     "vite": "^7.3.1",
     "vitest": "^4.0.18"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rajkumarganesan93/uifunctions.git"
   }
 }
