--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "@rajkumarganesan93/uifunctions",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "private": false,
   "main": "dist/index.cjs",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
-  "dev": "vite",
-  "build": "tsc -p tsconfig.build.json && tsup src/index.ts --format cjs,esm",
-  "test": "vitest",
-  "preview": "vite preview"
-},
+    "dev": "vite",
+    "build": "tsc -p tsconfig.build.json && tsup src/index.ts --format cjs,esm",
+    "test": "vitest",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "axios": "^1.13.5",
     "date-fns": "^4.1.0",
@@ -24,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/luxon": "^3.7.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
